# uf2utils

./: README.md  pyproject.toml
src/uf2utils/: __init__.py  block.py  constants.py  family.py  file.py  header.py
src/uf2utils/examples/: custom_pico.py  extract_binary.py  pico_fs_update.py  uf2_from_scratch.py  uf2_info.py
